kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: razglednica-z-visa
spec:
  selector:
    app: razglednica-z-visa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
